[package]
name = "a-star_traitbased"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*",
    "Cargo.toml",
    "LICENCE",
    "README.MD"
]
homepage = "https://github.com/Dah-phd/a-star_traitbased"
description = "Implemetaion of A* useful for stuct, based on train implementation"
repository = "https://github.com/Dah-phd/a-star_traitbased"
keywords = [
    "A*",
    "Astar",
    "pathfinding",
    "algorithm",
    "trait"
]
categories = ["Algorithms"]
license = "MIT"

[dependencies]
